--- a/modules/project-irs/client/views/ir-edit.html
+++ b/modules/project-irs/client/views/ir-edit.html
@@ -48,18 +48,17 @@
 
 	<fieldset>
 		<legend>Associated Content</legend>
-			<ul class="anchor-list" ng-if="ir.conditionArtifacts.length > 0">
-				<li ng-repeat="o in ir.conditionArtifacts">
-					<a ui-sref="p.artifact.view({artifactId:o._id})">{{o.name}}</a>
+		<ul class="tag-list form-control" ng-if="ir.conditionArtifacts.length > 0">
+			<li class="tag" ng-repeat="o in ir.conditionArtifacts">
+				<span class="tag-name" ui-sref="p.artifact.view({artifactId:o._id})">{{o.name}}</span>
+				<button class="btn" ng-click="removeConditionArtifact(o)"><span aria-hidden="true">×</span></a>
 			</li>
 		</ul>
-		<div class="form-group">
-			<button class="btn btn-default btn-sm"
-				ng-if="project.userCan.createInspectionReport"
-				ng-click="openAddTopic()">
-				<span class="glyphicon glyphicon-plus"></span><span>Add Project Content</span>
-			</button>
-		</div>
+		<button class="btn btn-default btn-sm"
+			ng-if="project.userCan.createInspectionReport"
+			ng-click="openAddTopic()">
+			<span class="glyphicon glyphicon-plus"></span><span>Add Project Content</span>
+		</button>
 	</fieldset>
 
 	<fieldset class="hidden">
@@ -73,7 +72,7 @@
 		</div>
 	</fieldset>
 
-	<hr class="no-margin">
+	<hr>
 
 	<div class="form-footer clearfix">
 		<div class="pull-right">
