--- a/modules/project-irs/client/views/ir-edit.html
+++ b/modules/project-irs/client/views/ir-edit.html
@@ -30,7 +30,11 @@
 					<input class="form-control" title="Name" id="name" name="inspectionreportname"
 						ng-model="ir.name" required />
 				</div>
-
+				<div class="col-sm-6 col-lg-3 detail-row">
+					<label>Date: </label>
+					<div class="form-control-static">{{ ir.irDate | amDateFormat:'MMM Do YYYY' }} <a x-modal-date-picker x-selected-date="ir.irDate" ng-model="ir.irDate"><i class="glyphicon glyphicon-calendar"></i></a></div>
+				</div>
+			</td>
 			</div>
 		</div>
 	</div><!-- / DETAILS -->
