--- a/modules/project-irs/client/views/ir-view.html
+++ b/modules/project-irs/client/views/ir-view.html
@@ -24,7 +24,10 @@
 					<label>Name: </label>
 					<span class="value">{{ ::ir.name }}</span>
 				</div>
-
+				<div class="col-sm-6 col-lg-3 detail-row">
+					<label>Date: </label>
+					<div class="form-control-static">{{ ir.irDate | amDateFormat:'MMM Do YYYY' }} <i class="glyphicon glyphicon-calendar"></i></a></div>
+				</div>
 			</div>
 		</div>
 	</div><!-- / DETAILS -->
