Changing name to Inspections.

--- a/modules/project-irs/client/views/ir-edit.html
+++ b/modules/project-irs/client/views/ir-edit.html
@@ -1,5 +1,5 @@
 <div class="view-title-container flex-row">
-	<h1><span ng-show="project.name">Edit Inspection Report {{ir.name}} <span class="placeholder-value" ng-if="!ir.artifact.name">{{ir.name}}</span></h1>
+	<h1><span ng-show="project.name">Edit Inspection - {{ir.name}} <span class="placeholder-value" ng-if="!ir.artifact.name">{{ir.name}}</span></h1>
 	<div class="actions">
 		<a class="btn btn-default btn-sm"
 			ui-sref="p.ir.list"
@@ -78,7 +78,7 @@
 	</a>
 	&nbsp;
 	<div class="form-footer no-border clearfix">
-		<a class="back-btn btn btn-link pull-left" ui-sref="p.ir.list"><span class="glyphicon glyphicon-chevron-left"></span>Back to Inspection Reports</a>
+		<a class="back-btn btn btn-link pull-left" ui-sref="p.ir.list"><span class="glyphicon glyphicon-chevron-left"></span>Back to Inspections</a>
 	</div>
 
 </div>
