--- a/modules/project-irs/client/views/ir-edit.html
+++ b/modules/project-irs/client/views/ir-edit.html
@@ -1,5 +1,5 @@
 <div class="view-title-container flex-row">
-	<h1><span ng-show="project.name">Inspection Report &nbsp;&rsaquo;&nbsp;{{ir.name}} <span class="placeholder-value" ng-if="!ir.name">Untitled</span></h1>
+	<h1><span ng-show="project.name">Inspection Report &nbsp;&rsaquo;&nbsp; {{ir.name}} <span class="placeholder-value" ng-if="!ir.name">Untitled</span></h1>
 	<div class="actions">
 		<a class="btn btn-default btn-sm"
 			ui-sref="p.ir.list"
@@ -29,12 +29,12 @@
 		</div>
 		<div class="row">
 			<div class="col-md-6 form-group">
-				<label>Date</label>
+				<label>Date of Inspection</label>
 				<div class="form-control date-picker"
 					x-modal-date-picker 
 					x-selected-date="ir.irDate" 
 					ng-model="ir.irDate">
-					{{ ir.irDate | amDateFormat:'MMM Do YYYY' }}
+					{{ ir.irDate | amDateFormat:'MMMM Do, YYYY' }}
 					<span class="glyphicon glyphicon-calendar"></span>
 				</div>
 			</div>
@@ -63,7 +63,7 @@
 		<ul class="tag-list form-control" ng-if="ir.conditionArtifacts.length > 0">
 			<li class="tag" ng-repeat="o in ir.conditionArtifacts">
 				<span class="tag-name" ui-sref="p.artifact.view({artifactId:o._id})">{{o.name}}</span>
-				<button class="btn" ng-click="removeConditionArtifact(o)"><span aria-hidden="true">?</span></a>
+				<button class="btn" ng-click="removeConditionArtifact(o)"><span aria-hidden="true">×</span></a>
 			</li>
 		</ul>
 		<button class="btn btn-default btn-sm"
