--- a/modules/project-irs/client/views/ir-view.html
+++ b/modules/project-irs/client/views/ir-view.html
@@ -13,18 +13,20 @@
 </div>
 
 <div class="view-body-container">
-	<div class="detail-row">
-		<label>Report Name</label>
-		<span class="value">{{ ::ir.name }}</span>
-	</div>
-	<div class="detail-row">
-		<label>Date of Inspection </label>
-		<span class="value">{{ ir.irDate | amDateFormat:'MMM Do YYYY' }}</span>
+	<div class="row">
+		<div class="col-md-6 detail-row">
+			<label>Report Name</label>
+			<span class="value">{{ ::ir.name }}</span>
+		</div>
+		<div class="col-md-6 detail-row">
+			<label>Date of Inspection </label>
+			<span class="value">{{ ir.irDate | amDateFormat:'MMM Do YYYY' }}</span>
+		</div>	
 	</div>	
-			
+	
 	<section>
 		<h2>Associated Conditions</h2>
-		<a ng-repeat="ir.artifacts">{{ ir.artifact.name }}</a>
+		<a ng-repeat="ir.conditionArtifacts">Derp</a>
 	</section>
 
 	<section>
