--- a/modules/project-irs/client/views/ir-list.html
+++ b/modules/project-irs/client/views/ir-list.html
@@ -1,7 +1,7 @@
 <div class="inspection-report-view">
 
 	<div class="view-title-container">
-		<h1><span ng-show="project.name">{{ project.name }}&nbsp; &rsaquo; &nbsp;</span>Inspections</h1>
+		<h1>Inspections</h1>
 <!-- 		<tmpl-permissions-gear class="permission-btn" x-context="menu.project" x-object="menu.project" x-permissions=""></tmpl-permissions-gear> -->
 	</div>
 
