--- a/modules/project-irs/client/views/ir-edit.html
+++ b/modules/project-irs/client/views/ir-edit.html
@@ -1,5 +1,5 @@
 <div class="view-title-container flex-row">
-	<h1><span ng-show="project.name">Inspection Report &nbsp;&rsaquo;&nbsp; {{ir.name}} <span class="placeholder-value" ng-if="!ir.name">Untitled</span></h1>
+	<h1><span ng-show="project.name">Edit Inspection &nbsp;&rsaquo;&nbsp; {{ir.name}} <span class="placeholder-value" ng-if="!ir.name">Untitled</span></h1>
 	<div class="actions">
 		<a class="btn btn-default btn-sm"
 			ui-sref="p.ir.list"
@@ -21,9 +21,10 @@
 <div class="view-body-container">
 	
 	<fieldset>
+		<legend>Report Details</legend>
 		<div class="row">
 			<div class="col-md-6 form-group">
-				<label>Report Name</label>
+				<label>Name</label>
 				<input class="form-control" title="Name" id="name" name="inspectionreportname" ng-model="ir.name" required/>
 			</div>
 		</div>
@@ -62,10 +63,12 @@
 
 	<fieldset>
 		<legend>Associated Content</legend>
-		<ul class="tag-list form-control" ng-if="ir.conditionArtifacts.length > 0">
-			<li class="tag" ng-repeat="o in ir.conditionArtifacts">
-				<span class="tag-name" ui-sref="p.artifact.view({artifactId:o._id})">{{o.name}}</span>
-				<button class="btn" ng-click="removeConditionArtifact(o)"><span aria-hidden="true">×</span></a>
+		<ul class="list-group no-margin" ng-if="ir.conditionArtifacts.length > 0">
+			<li class="list-group-item flex-row" ng-repeat="o in ir.conditionArtifacts">
+				<span class="title" ui-sref="p.artifact.view({artifactId:o._id})">{{o.name}}</span>
+				<span class="actions">
+					<button class="btn btn-default btn-sm" ng-click="removeConditionArtifact(o)"><span class="glyphicon glyphicon-remove"></span></button>
+				</span>
 			</li>
 		</ul>
 		<button class="btn btn-default btn-sm"
@@ -97,7 +100,7 @@
 				ng-click="save()">Save</button>
 		</div>
 	</div>
-	
+
 	<a class="btn btn-default btn-sm" title="Edit Inspection Report Template"
 		ng-if="project.userCan.createInspectionReport" 
 		ng-click="$event.stopPropagation()" 
