--- a/modules/communications/client/views/communication-edit.html
+++ b/modules/communications/client/views/communication-edit.html
@@ -1,10 +1,11 @@
+<form class="view-form" name="projectUpdateForm" novalidate>
 
 <div class="view-title-container flex-row">
-    <h1>Project Update &nbsp;&rsaquo;&nbsp; {{o.name}} <span class="placeholder-value" ng-if="!o.name">Untitled</span></h1>
+    <h1>Project Update &nbsp;&rsaquo;&nbsp; {{s.communication.name}} <span clas="placeholder-value" ng-if="!s.communication.name">Untitled</span></h1>
     <div class="actions">
-        <button class="btn btn-default btn-sm">Cancel</button>
-        <button class="btn btn-primary btn-sm">Save</button>
-        <button class="btn btn-success btn-sm" disabled>Send</button>
+        <button type="button" class="btn btn-default btn-sm" ng-click="cancel()">Cancel</button>
+        <button type="button" class="btn btn-primary btn-sm" ng-click="save(projectUpdateForm.$valid)">Save</button>
+        <button type="button" class="btn btn-success btn-sm" ng-if="mode === 'edit'" ng-disabled="projectUpdateForm.$invalid" ng-click="send(projectUpdateForm.$valid)">Send</button>
     </div>
 </div>
 
@@ -17,38 +18,26 @@
         </li>
         <li role="presentation" ng-class="{'active':form.curTab === 'recipients'}" class="form-group">
             <a ng-click="form.curTab = 'recipients'" title="Edit Project Recipients" name="recipientsForm">
-                <span class="glyphicon glyphicon-exclamation-sign"></span>Recipients (0)</a>
+                <span class="glyphicon glyphicon-exclamation-sign"></span>Recipients ({{recipients.length}})</a>
         </li>
     </ul>
 
     <div class="tab-pane active" ng-show="form.curTab === 'Update Details'" ng-form="projectUpdateDetailsForm">
 
-        <div class="form-group">
+        <div class="form-group" x-show-errors>
             <label class="control-label">Name<em class="required">(Required)</em></label>
-            <input class="form-control"></input>
+            <input class="form-control" ng-model="s.communication.name" id="name" name="name" title="Name" required />
         </div>
 
         <fieldset>
-            <legend>Related Artifacts (0)</legend>
+            <legend>Related Content ({{artifacts.length}})</legend>
             <div class="tag-list form-control">
-                <span class="tag">
-                    <span class="tag-name">Artifact</span>
-                    <button class="btn" ng-click="s.cancel()"><span aria-hidden="true">×</span></button>
-                </span>
-                <span class="tag">
-                    <span class="tag-name">Artifact</span>
-                    <button class="btn" ng-click="s.cancel()"><span aria-hidden="true">×</span></button>
-                </span>
-                <span class="tag">
-                    <span class="tag-name">Artifact</span>
-                    <button class="btn" ng-click="s.cancel()"><span aria-hidden="true">×</span></button>
-                </span>
-                <span class="tag">
-                    <span class="tag-name">Artifact</span>
-                    <button class="btn" ng-click="s.cancel()"><span aria-hidden="true">×</span></button>
+                <span ng-repeat="art in artifacts" class="tag">
+                    <span class="tag-name">{{art.name}}</span>
+                    <button type="button" class="btn" ng-click="removeArtifact(art._id)"><span aria-hidden="true">×</span></button>
                 </span>
             </div>
-            <button class="btn btn-default btn-sm"><span class="glyphicon glyphicon-plus"></span><span>Add Artifacts</span></button>
+            <button type="button" x-artifact-list-chooser x-project="project" x-current="artifacts" class="btn btn-default btn-sm"><span class="glyphicon glyphicon-plus"></span><span>Add Related Content</span></button>
         <fieldset>
 
         <hr />
@@ -56,17 +45,17 @@
         <fieldset>
             <legend>Configure Email</legend>
             <div class="form-group">
-                <button class="btn btn-default btn-sm" x-email-template-chooser x-project="project" x-current="s.communication.emailTemplate">Use Existing Template</button>
+                <button type="button" class="btn btn-default btn-sm" x-email-template-chooser x-project="project" x-current="emailTemplate">Use Existing Template</button>
 
             </div>
-            <div class="form-group">
+            <div class="form-group" x-show-errors>
                 <label class="control-label">Subject<em class="required">(Required)</em></label>
-                <input class="form-control" ng-model="s.communication.emailTemplate.subject"></input>
+                <input class="form-control" ng-model="s.communication.templateSubject" id="subject" name="subject" title="Subject" required></input>
             </div>
-            <div class="form-group">
+            <div class="form-group" x-show-errors>
                 <label class="control-label">Message<em class="required">(Required)</em></label>
                 <textarea ui-tinymce="tinymceOptions" type="text"
-                    ng-model="s.communication.emailTemplate.content"
+                    ng-model="s.communication.templateContent" id="message" name="message" title="Message" required
                     ng-blur="activeItem = false">
                 </textarea>
             </div>
@@ -75,87 +64,55 @@
 
     <div class="tab-pane" ng-show="form.curTab === 'recipients'" ng-form="recipientsForm">
         <div class='button-bar'>
-            <button class="btn btn-default btn-sm"><span class="glyphicon glyphicon-plus"></span><span>Add New</span></button>
-            <button class="btn btn-default btn-sm"><span class="glyphicon glyphicon-plus"></span><span>Add Existing</span></button>
+            <button type="button" x-add-new-recipient x-project="project" x-current="adhocRecipient" class="btn btn-default btn-sm"><span class="glyphicon glyphicon-plus"></span><span>Add New</span></button>
+            <button type="button" class="btn btn-default btn-sm"><span class="glyphicon glyphicon-plus"></span><span>Add Existing</span></button>
         </div>
         <div class="panel panel-default">
-            <table class="recipients-table table table-hover"
-                ng-table="tableParams"
-                show-filter="false">
-                <tr>
-                    <td class="name-col"
-                        header-class="'name-col'"
-                        data-title="'Name'"
-                        filter="{'name':'text'}"
-                        sortable="'name'">Recipient Name
-                    </td>
-                    <td class="email-col"
-                        header-class="'email-col'"
-                        data-title="'Email'"
-                        filter="{'name':'text'}"
-                        sortable="'name'">recipient@email.com
-                    </td>
-                    <td class="org-col"
-                        header-class="'org-col'"
-                        data-title="'Organization'"
-                        filter="{'name':'text'}"
-                        sortable="'name'">Organization
-                    </td>
-                    <td class="type-col"
-                        header-class="'type-col'"
-                        data-title="'Type'"
-                        filter="{'name':'select'}"
-                        sortable="'name'">Type
-                    </td>
-                    <td class="actions-col action-x1" header-class="'actions-col action-x1'"
-                        data-title="''">
-                        <button class="btn btn-default btn-sm">
-                            <span class="glyphicon glyphicon-remove"></span>
-                        </button>
-                    </td>
-                </tr>
-                <tr>
-                    <td class="name-col"
-                        header-class="'name-col'"
-                        data-title="'Name'"
-                        filter="{'name':'text'}"
-                        sortable="'name'">Recipient Name
-                    </td>
-                    <td class="email-col"
-                        header-class="'email-col'"
-                        data-title="'Email'"
-                        filter="{'name':'text'}"
-                        sortable="'name'">recipient@email.com
-                    </td>
-                    <td class="org-col"
-                        header-class="'org-col'"
-                        data-title="'Organization'"
-                        filter="{'name':'text'}"
-                        sortable="'name'">Organization
-                    </td>
-                    <td class="type-col"
-                        header-class="'type-col'"
-                        data-title="'Type'"
-                        filter="{'name':'select'}"
-                        sortable="'name'">Type
-                    </td>
-                    <td class="actions-col action-x1"
-                        header-class="'actions-col action-x1'">
-                        <button class="btn btn-default btn-sm">
-                            <span class="glyphicon glyphicon-remove"></span>
-                        </button>
-                    </td>
-                </tr>
-            </table>
+          <table ng-table="tableParams" show-filter="true" class="communications-table table table-hover vc-table">
+            <tr ng-repeat="o in $data">
+              <td class="name-col"
+                  header-class="'name-col'"
+                  data-title="'Name'"
+                  filter="{'displayName':'text'}"
+                  sortable="'displayName'">{{o.displayName}}
+              </td>
+              <td class="email-col"
+                  header-class="'email-col'"
+                  data-title="'Email'"
+                  filter="{'email':'text'}"
+                  sortable="'email'">{{o.email}}
+              </td>
+              <td class="org-col"
+                  header-class="'org-col'"
+                  data-title="'Organization'"
+                  filter="{'org':'text'}"
+                  sortable="'org'">{{o.org}}
+              </td>
+              <td class="actions-col action-x1" header-class="'actions-col action-x1'"
+                  data-title="''">
+                <button type="button" class="btn btn-default btn-sm" ng-click="removeRecipient(o.email)">
+                  <span class="glyphicon glyphicon-remove"></span>
+                </button>
+              </td>
+            </tr>
+
+            <tr class="no-records hidden" ng-if="!$data || $data.length === 0">
+              <td colspan="2">
+                No records found.
+              </td>
+            </tr>
+
+          </table>
         </div>
     </div>
 
     <div class="form-footer">
         <div class="pull-right">
-            <button class="btn btn-default btn-sm">Cancel</button>
-            <button class="btn btn-primary btn-sm">Save</button>
-            <button class="btn btn-success btn-sm" disabled>Send</button>
+          <button type="button" class="btn btn-default btn-sm" ng-click="cancel()">Cancel</button>
+          <button type="button" class="btn btn-primary btn-sm" ng-click="save(projectUpdateForm.$valid)">Save</button>
+          <button type="button" class="btn btn-success btn-sm" ng-disabled="projectUpdateForm.$invalid" ng-click="send(projectUpdateForm.$valid)">Send</button>
         </div>
-    <div>
+    </div>
 
 </div>
+</form>
