--- a/modules/email-templates/client/views/add-new-recipient-modal.html
+++ b/modules/email-templates/client/views/add-new-recipient-modal.html
@@ -1,4 +1,7 @@
-<div class="modal-header">
+
+<form name="newRecipientForm" ng-submit="s.submit(newRecipientForm.$valid)" novalidate>
+
+  <div class="modal-header">
 	<button type="button" class="btn btn-default close" ng-click="s.cancel()">
 		<span aria-hidden="true">&times;</span>
 	</button>
@@ -6,17 +9,18 @@
 </div>
 
 <div class="modal-body">
-    <div class="form-group">
+    <div class="form-group" x-show-errors>
         <label class="control-label">Name<em class="required">(Required)</em></label>
-        <input class="form-group"></input>
+        <input class="form-control" ng-model="s.name" id="name" name="name" title="Name" required></input>
     </div>
-    <div class="form-group">
+    <div class="form-group" x-show-errors>
         <label class="control-label">Email<em class="required">(Required)</em></label>
-        <input class="form-group"></input>
+        <input type="email" class="form-control"  ng-model="s.email" id="email" name="email" title="Email" required ></input>
     </div>
 </div>
 
 <div class="modal-footer">
     <button type="button" class="btn btn-default" ng-click="s.cancel()">Cancel</button>
-	<button type="button" class="btn btn-primary" ng-click="s.submit()">Add</button>
+	  <button type="submit" class="btn btn-primary">Add</button>
 </div>
+</form>
