--- a/modules/email-templates/client/views/email-template-chooser.html
+++ b/modules/email-templates/client/views/email-template-chooser.html
@@ -6,17 +6,17 @@
 <div class="modal-body">
 	<section class="panel panel-default no-margin">
 		<table class="table table-scroll add-vc-table" ng-table="tableParams" show-filter="false">
-			<tr ng-repeat="t in s.templates">
-				<td class="name-col" 
+			<tr ng-repeat="t in s.items">
+				<td class="name-col"
 					header-class="'name-col'"
 				 	data-title="'Name'">
 					<input type="checkbox" ng-click="s.select(t._id)" ng-checked="s.isSelected(t._id)"/>{{ t.name }}</td>
 				<td data-title="'Group'">{{t.group}}</td>
-				<tr ng-show="!s.templates" class="text-center">
-					<td colspan="3">No Topics found.</td>
-				</tr>					
 			</tr>
-		</table>
+      <tr ng-show="!s.items" class="text-center">
+        <td colspan="3">No Email Templates found.</td>
+      </tr>
+    </table>
 	</section>
 </div>
 
