--- a/modules/project-irs/client/views/ir-view.html
+++ b/modules/project-irs/client/views/ir-view.html
@@ -14,60 +14,73 @@
 
 <div class="view-body-container">
 	
-	<section>
-		<h2>Report Details</h2>
-		<div class="detail-row">
-			<label>Name</label>
-			<span class="value">{{ ::ir.name }}</span>
+	<div class="panel panel-default">
+		<div class="panel-heading">
+			<h2>Inspection Details</h2>
 		</div>
-		<div class="detail-row">
-			<label>Date of Inspection</label>
-			<span class="value">{{ ir.irDate | amDateFormat:'MMM Do YYYY'}}</span>
+		<div class="panel-body detail-panel">
+			<div class="row">
+				<div class="detail-row col-md-6">
+					<label>Name</label>
+					<span class="value">{{ ::ir.name }}</span>
+				</div>
+				<div class="detail-row col-md-6">
+					<label>Date of Inspection</label>
+					<span class="value">{{ ir.irDate | amDateFormat:'MMM Do YYYY'}}</span>
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-sm-12 detail-row" ng-if="ir.conditionArtifacts.length > 0">
+					<label>Associated Content</label>
+					<ul class="anchor-list">
+						<li ng-repeat="o in ir.conditionArtifacts" ui-sref="p.artifact.view({artifactId:o._id})">
+							<a class="title">{{o.name}}</a>
+						</li>
+					</ul>
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-sm-12 detail-row">
+					<label>Inspection Template</label>
+					<div class="anchor-list">
+						<a ui-sref="p.artifact.view({artifactId:ir.artifact._id})">{{ir.artifact.name}}</a>
+					</div>
+				</div>
+			</div>
 		</div>
-	</section>	
-
-	<hr>
+	</div>	
 	
-	<section>
-		<h2>Associated Conditions</h2>
-		<div class="list-group">
+	<div class="panel panel-default">
+		<div class="panel-heading">
+			<h2>Conditions</h2>
+		</div>
+		<div class="list-group no-border">
 			<div class="list-group-item">No Conditions available</div>
 		</div>
-	</section>
+	</div>
 
-	<section>
-		<h2>Associated Content</h2>
-		<div class="list-group">
-			<div class="list-group-item" ng-if="ir.conditionArtifacts.length == 0">No Associated Content available</div>
-			<a class="list-group-item" ng-repeat="o in ir.conditionArtifacts" ui-sref="p.artifact.view({artifactId:o._id})">{{o.name}}</a>
+	<div class="panel panel-default">
+		<div class="panel-heading">
+			<h2>Actions</h2>
 		</div>
-	</section>
-
-	<section>
-		<h2>Actions</h2>
-		<div ng-repeat="o in ir.enforcementActions">
-			<div>
-				<label>Action</label>
-				<div>{{o.action}}</div>
-				<div>{{o.condition}}</div>
+		<div class="list-group no-border">
+			<div class="list-group-item" ng-if="ir.enforcementActions == 0">No Actions available</div>
+			<div ng-repeat="o in ir.enforcementActions">
+				<div>
+					<label>Action</label>
+					<div>{{o.action}}</div>
+					<div>{{o.condition}}</div>
+				</div>
+				<div>
+					<label>Status</label>
+					<div>{{o.status}}</div>
+				</div>
+				<div>
+					<label>Date</label>
+					<div>{{o.date}}</div>
+				</div>
 			</div>
-			<div>
-				<label>Status</label>
-				<div>{{o.status}}</div>
-			</div>
-			<div>
-				<label>Date</label>
-				<div>{{o.date}}</div>
-			</div>
-			/div>
-	</section>
-
-	<div>
-		<a class="btn btn-default btn-sm" title="Go To Inspection Record"
-		ng-click="$event.stopPropagation()"
-		ui-sref="p.artifact.view({artifactId:ir.artifact._id})">Go To Inspection Record &nbsp;
-		<span class="glyphicon glyphicon-share-alt"></span>
-	</a>
+		</div>
 	</div>
 
 	<div class="form-footer no-border clearfix hidden">
