Setting up directive options for code push later.

--- a/modules/project-irs/client/views/ir-add-action.html
+++ b/modules/project-irs/client/views/ir-add-action.html
@@ -43,9 +43,9 @@
 					<div class="col-sm-6 col-md-4 form-group">
 						<label class="control-label" for="type">Condition<em class="required">(Required)</em></label>
 						<button type="button"
-							x-artifact-list-chooser
-							x-project="project"
-							x-current="artifacts"
+							x-condition-list-chooser
+							x-inspectionreport="ir"
+							x-current="s.conditions"
 							class="btn btn-default btn-sm"><span class="glyphicon glyphicon-plus"></span><span>Link Condition</span>
 						</button>
 					</div>
