--- a/modules/core/client/scss/core.scss
+++ b/modules/core/client/scss/core.scss
@@ -3442,6 +3442,8 @@ section {
 /* TAG LIST 
 ------------------------------ */
 .tag-list {
+	padding: 0;
+
 	&.form-control {
 		min-height: 3.4rem;
 		height: auto;
