--- a/modules/project-irs/client/views/ir-edit.html
+++ b/modules/project-irs/client/views/ir-edit.html
@@ -47,14 +47,32 @@
 				<div class="row">
 					<div class="col-md-12 form-group">
 						<label class="control-label">Associated Content</label>
-						<ul class="anchor-list" ng-if="ir.conditionArtifacts.length > 0">
-							<li ng-repeat="o in ir.conditionArtifacts">
-								<a ui-sref="p.artifact.view({artifactId:o._id})">{{o.name}}</a>
+						<ul class="tag-list form-control" ng-if="ir.conditionArtifacts.length > 0">
+							<li class="tag" ng-repeat="o in ir.conditionArtifacts">
+								<span class="tag-name" ui-sref="p.artifact.view({artifactId:o._id})">{{o.name}}</span>
+								<button class="btn" ng-click="removeConditionArtifact(o)"><span aria-hidden="true">×</span></button>
 							</li>
 						</ul>
 						<button class="btn btn-default btn-sm anchor-list-btn"
 							ng-if="project.userCan.createInspectionReport"
 							ng-click="openAddTopic()" type="button" title="Link Project Conditions">+ Add Content
+						</button>
+					</div>
+				</div>
+				<div class="row">
+					<div class="col-md-12 form-group">
+						<label class="control-label">Conditions</label>
+						<ul class="tag-list form-control" ng-if="ir.conditions.length > 0">
+							<li class="tag" ng-repeat="o in ir.conditions">
+								<span class="tag-name" ui-sref="p.artifact.view({artifactId:o._id})">{{o.name}}</span>
+								<button class="btn" ng-click="removeConditionArtifact(o)"><span aria-hidden="true">×</span></button>
+							</li>
+						</ul>
+						<button class="btn btn-default btn-sm anchor-list-btn" ng-if="project.userCan.createInspectionReport" type="button" title="Link Project Conditions"
+							x-vc-linker
+							x-project="project"
+							x-condition="condition"
+							x-conditions="ir.conditions">+ Add Conditions</span>
 						</button>
 					</div>
 				</div>
@@ -71,24 +89,7 @@
 				</div>
 			</div>
 		</div><!--/INSPECTION DETAILS -->
-
-		<div class="panel panel-default">
-			<div class="panel-heading flex-row">
-				<h2>Conditions</h2>
-				<div class="actions">
-					<button ng-if="project.userCan.createInspectionReport" class="btn btn-default btn-sm anchor-list-btn" type="button" title="Link Project Conditions"
-						x-vc-linker
-						x-project="project"
-						x-condition="condition"
-						x-conditions="ir.conditions"><span class="glyphicon glyphicon-plus"></span><span>Add Conditions</span>
-					</button>
-				</div>
-			</div>
-			<div class="list-group no-border">
-				<div class="list-group-item" ng-if="ir.conditions.length == 0">No Conditions available</div>
-				<a class="list-group-item" ng-repeat="o in ir.conditions" ui-sref="p.projectcondition.detail({conditionId:o._id})">{{o.name}}</a>
-			</div>
-		</div>
+	
 
 		<div class="panel panel-default">
 			<div class="panel-heading flex-row">
